# octopus

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
include/octopus/: threadpool.h  threads.h
test/: main.cc  test.cc
